# opensound

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: config.py  database.py
cli/: config.py  installer.py  main.py  models.py
recipes/: FireFlySynth2-clap-linux-bin.yaml  vital.yaml
tests/: __init__.py  test_config.py  test_installer.py  test_models.py
